# block-agents

./: .env.example  .gitignore  README.md  blocks_list.json  frontend_output.json  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
block_agents/: __init__.py  __main__.py  list_blocks.py  main.py  see_parser.py
block_agents/api/: __init__.py  routes.py  stream.py
block_agents/blocks/: __init__.py  file.py  json_schema.py  llm.py  output.py  rag.py  repeater.py  script.py  text.py
block_agents/blocks/llm_providers/: __init__.py  anthropic.py  litellm.py  ollama.py  openai.py
block_agents/core/: __init__.py  block.py  client_manager.py  config.py  context.py  errors.py  pipeline.py  registry.py  stream.py
block_agents/examples/: README.md  input_values.json  llm_rag.json  llm_rag_input.json  simple_pipeline.json
block_agents/parsers/: __init__.py  frontend_parser.py
block_agents/utils/: __init__.py
tests/: __init__.py
tests/blocks/: __init__.py  test_file.py  test_json_schema.py  test_llm_providers.py  test_rag.py  test_repeater.py  test_script.py  test_text.py
tests/core/: __init__.py  test_block.py  test_config.py  test_context.py  test_errors.py  test_pipeline.py  test_registry.py  test_stream.py
